// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatternPicker should correctly use its props.patterns 1`] = `
<div
  className="pattern-picker-container"
>
  <div>
    <label
      className="pattern-picker-text"
      htmlFor="pattern"
    >
      Pattern:
    </label>
  </div>
  <select
    id="pattern"
    name="pattern"
  >
    <option
      key="single_cell"
      value="single_cell"
    >
      single_cell
    </option>
    <option
      key="test"
      value="test"
    >
      test
    </option>
    <option
      key="test2"
      value="test2"
    >
      test2
    </option>
  </select>
</div>
`;

exports[`PatternPicker should render correctly 1`] = `
<div
  className="pattern-picker-container"
>
  <div>
    <label
      className="pattern-picker-text"
      htmlFor="pattern"
    >
      Pattern:
    </label>
  </div>
  <select
    id="pattern"
    name="pattern"
  />
</div>
`;
